2007-04-09  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlanguages.c:  When the user changes language, GDM pops up
	  a dialog asking if the user wants to restart GDM.  If the user
	  picks "No", the new language should still be applied for when the
	  session starts.  This patch fixes this.

2007-04-09  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmflexiserver.c: Mark error strings for translation.

2007-04-09  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmflexiserver.c: Slightly better fix that causes gdmflexiserver
	  to display the dialog GUI when not using --command, and display a
	  text error when using --command.

2007-04-09  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmflexiserver.c: Report an error message when the gdmcomm_check
	  test fails.

2007-04-06  William Jon McCann  <mccann@jhu.edu>

	* daemon/slave.c: (gdm_slave_greeter):
	Remove duplicate code from bad svn merge.
	From #427022

2007-04-06  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.in: Fix script so it works with Solaris /bin/sh.

2007-04-06  Brian Cameron  <brian.cameron@sun.com>

	* config/CDE.desktop.in: Change name of CDE to "Common Desktop
	  Environment (CDE)".

2007-04-06  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcomm.c: Fix messages so that they don't imply that
	  Xnest is the nested X server program, since it may be
	  Xephyr, or another program.

2007-04-06  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcommon.[ch], gui/gdmlogin.c,
	  gui/greeter/greeter_item_ulist.c:  Usernames with non-utf8
	  characters were causing GDM GUI to crash when it tried to
	  display in the face browser.  This patch fixes so non-utf8
	  characters display as '?'.  Fixes bug #426647.  Patch by
	  Ray Strode <rstrode@redhat.com>.

2007-04-05  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Return correct value when GET_CONFIG_FILE is 
	  asked for.  Previously the value was NULL when using the compiled
	  in default.