@@ -56,13 +56,15 @@ GList *		gdm_lang_read_locale_file (const char *file);
 
 GtkListStore *	gdm_lang_get_model		(void);
 void		gdm_lang_initialize_model	(gchar *locale_file);
-gint		gdm_lang_get_save_language	(void);
-gchar *		gdm_lang_get_language		(const char      *old_language);
+gchar *		gdm_lang_check_language		(const char      *old_language);
 void		gdm_lang_set			(char *language);
+void            gdm_lang_set_restart_dialog     (char *language);
+gint		gdm_lang_get_savelang_setting	(void);
 void		gdm_lang_handler		(gpointer user_data);
 int		gdm_lang_op_lang		(const gchar *args);
 int		gdm_lang_op_slang		(const gchar *args);
 int		gdm_lang_op_setlang		(const gchar *args);
 int		gdm_lang_op_always_restart	(const gchar *args);
+gint            gdm_lang_ask_restart            (gchar *language);
 
 #endif /* GDM_LANGUAGES_H */
