@@ -1,5 +1,12 @@
 2007-04-09  Brian Cameron  <brian.cameron@sun.com>
 
+	* gui/gdmlanguages.[ch], gui/greeter/greeter_item_customlist.c:
+	  Fix language restart dialog so it works properly with the 
+	  gdmgreeter language combo/list style selection, not just 
+	  with the language dialog that pops up from the menu.
+
+2007-04-09  Brian Cameron  <brian.cameron@sun.com>
+
 	* gui/gdmlanguages.c:  When the user changes language, GDM pops up
 	  a dialog asking if the user wants to restart GDM.  If the user
 	  picks "No", the new language should still be applied for when the
